# rustic-realms-server

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs  mod.rs
src/api/: experimental_api.rs  mod.rs  player_admin_api.rs
src/combat/: attack.rs  attacktype.rs  brawl.rs  combatant.rs  mod.rs  skirmishresult.rs  warrior.rs
src/conversation/: mod.rs  question.rs
src/errors/: mod.rs  requesterror.rs
src/food/: edible.rs  edibletype.rs  mod.rs
src/food/fruit/: mango.rs  mod.rs
src/food/vegetables/: courgette.rs  mod.rs
src/player/: mod.rs  player.rs
src/properties/: emotion.rs  mod.rs  superpower.rs
src/services/: experimental_services.rs  mod.rs
src/services/ai/: chatgpt_service.rs  mod.rs
