[package]
name = "modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-rt"]
tokio-rt = ["tokio", "sqlx/runtime-tokio-native-tls"]

[dependencies]

curl = "0.4.44"
strum = "0.24"
strum_macros = "0.24"
tide = "0.16.0"
rustls = "0.21.0"
tide-sqlx = { version = "0.6.1", features = ["postgres", "native-tls"] }

async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1.11.0", features = ["full"], optional = true }
sqlx = { version = "0.6.3", features = ["postgres", "uuid", "chrono", "json"] }
chatgpt_rs = "1.1.3"


serde = { version = "1.0", features = ["derive"] }